[package]
name = "mmtk-julia"
version = "0.1.0"
authors = ["Eduardo Souza <ledusou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Metadata for the Julia repository
[package.metadata.julia]
# Our CI matches the following line and extract mmtk/julia. If this line is updated, please check ci yaml files and make sure it works.
julia_repo = "https://github.com/qinsoon/julia.git"
julia_version = "7aea57a1d7f7cbdf4672bb8be6e156369be61e5f"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "*"
built = "*"

[profile.release]
lto = true

[dependencies]
libc = "0.2"
lazy_static = "1.1"
# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI
mmtk = { git = "https://github.com/qinsoon/mmtk-core.git", rev = "9fa6530fdcc558cc2f741d5de7e9f7b453dcce85" }
# Uncomment the following to build locally
# mmtk = { path = "../../mmtk-core" }
log = {version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
enum-map = ">=2.1"
atomic = "0.4.6"
chrono = "*"
thread-id = "*"
memoffset = "*"

# ykstackmaps = { git = "https://github.com/udesou/ykstackmaps.git", branch = "udesou-master", version = "*" }

[features]
default = ["mmtk/vm_space", "julia_copy_stack", "object_pinning", "is_mmtk_object"]

# Plans
nogc = []
immix = []
stickyimmix = ["mmtk/sticky_immix_non_moving_nursery", "mmtk/immix_smaller_block"]
marksweep = []
object_pinning = ["mmtk/object_pinning"]

# This feature disables moving
non_moving = ["mmtk/immix_non_moving", "mmtk/immix_smaller_block"]
julia_copy_stack = []
# Feature necessary to support conservative stack scanning
is_mmtk_object = ["mmtk/is_mmtk_object"]
