[package]
name = "mmtk-julia"
version = "0.30.3"
authors = ["Eduardo Souza <ledusou@gmail.com>", "Yi Lin <qinsoon@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "*"
built = { version = "*", features = ["git2"] }
bindgen = "*"

[profile.release]
lto = true

[dependencies]
libc = "0.2"
lazy_static = "1.1"
# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI
mmtk = { git = "https://github.com/udesou/mmtk-core.git", rev = "704b3f7f9bc48f9c98d37c64b23ab7157963e44e" }
# Uncomment the following to build locally
# mmtk = { path = "../../mmtk-core" }
log = {version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
enum-map = ">=2.1"
atomic = "0.4.6"
chrono = "*"
thread-id = "*"
memoffset = "*"

# ykstackmaps = { git = "https://github.com/udesou/ykstackmaps.git", branch = "udesou-master", version = "*" }

[features]
# We must build with default features
default = ["mmtk/vm_space", "julia_copy_stack", "mmtk/object_pinning", "mmtk/is_mmtk_object", "mmtk/vo_bit_access"]#, "dump_memory_stats"]

# Default features
julia_copy_stack = []

# Plans: choose one
nogc = []
immix = []
stickyimmix = ["mmtk/sticky_immix_non_moving_nursery", "mmtk/immix_smaller_block"]
marksweep = []

# This feature disables moving
non_moving = ["mmtk/immix_non_moving", "mmtk/immix_smaller_block"]

# This feature makes every GC a defrag GC for Immix
immix_always_moving = ["mmtk/immix_stress_defrag"]

# This feature enables max copying for Immix
immix_max_moving = ["mmtk/immix_stress_defrag", "mmtk/immix_defrag_every_block"]

# Use this feature to print fragmentation/pinning stats
dump_memory_stats = ["mmtk/dump_memory_stats"]
