[package]
name = "mmtk-julia"
version = "0.30.3"
authors = ["Eduardo Souza <ledusou@gmail.com>", "Yi Lin <qinsoon@gmail.com>"]
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "*"
built = { version = "*", features = ["git2"] }
bindgen = "*"

[profile.release]
lto = true

[dependencies]
libc = "0.2"
lazy_static = "1.1"
# Be very careful to commit any changes to the following mmtk dependency, as our CI scripts (including mmtk-core CI)
# rely on matching these lines to modify them: e.g. comment out the git dependency and use the local path.
# These changes are safe:
# - change branch
# - change repo name
# But other changes including adding/removing whitespaces in commented lines may break the CI
mmtk = { git = "https://github.com/qinsoon/mmtk-core.git", rev = "cc630f0abd524c3c10dab79c58ee4589bc4b67e8" }
# Uncomment the following to build locally
# mmtk = { path = "../../mmtk-core" }
log = {version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
enum-map = ">=2.1"
atomic = "0.4.6"
chrono = "*"
thread-id = "*"
memoffset = "*"
json = "0.12.4"

# ykstackmaps = { git = "https://github.com/udesou/ykstackmaps.git", branch = "udesou-master", version = "*" }

[features]
# We must build with default features
default = ["mmtk/vm_space", "julia_copy_stack", "mmtk/object_pinning", "mmtk/is_mmtk_object", "mmtk/vo_bit_access", "address_based_hashing", "mmtk/object_end_internal_pointer"]#, "heap_dump"]#, "dump_memory_stats"]

# Default features
julia_copy_stack = []

# Plans: choose one
nogc = []
immix = []
stickyimmix = ["mmtk/sticky_immix_non_moving_nursery", "mmtk/immix_smaller_block"]
marksweep = []

# This feature disables moving
non_moving = ["mmtk/immix_non_moving", "mmtk/immix_smaller_block"]

# This feature makes every GC a defrag GC for Immix
immix_always_moving = ["mmtk/immix_stress_defrag"]

# This feature enables max copying for Immix
immix_max_moving = ["mmtk/immix_stress_defrag", "mmtk/immix_defrag_every_block"]

# Use this feature to print fragmentation/pinning stats
dump_memory_stats = ["mmtk/dump_memory_stats"]

address_based_hashing = []

heap_dump = []
dump_block_stats = []
print_fragmentation = []

# Debug option to record the type of moved objects.
# When we encounter a dangling pointer, we can know its old type.
record_moved_objects = []
